--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     </title>
   </head>
   <body>
+    <div id="app">
+      <h1>Hello App!</h1>
+      <p>
+        <router-link to="/foo">Go to Foo</router-link>
+        <router-link to="/bar">Go to Bar</router-link>
+      </p>
+      <router-view></router-view>
+    </div>
     <script type="text/javascript" src='node_modules/vue/dist/vue.js'></script>
     <script type="text/javascript" src='node_modules/vue-router/dist/vue-router.js'></script>
+    <script type="text/javascript" src='index.js'></script>
   </body>
 </html>
