Step 2 dynamic root matching

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <p>
         <router-link to="/foo">Go to Foo</router-link>
         <router-link to="/bar">Go to Bar</router-link>
+        <router-link to="/user">Go to User</router-link>
+
         <a v-on:click="goBack">back</a>
       </p>
       <router-view></router-view>
