Step 6 view with name

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
         <a v-on:click="goBack">back</a>
       </p>
-      <router-view></router-view>
+      <router-view class="view one"></router-view>
+      <router-view class="view two" name="footer"></router-view>
     </div>
     <script type="text/javascript" src='index.js'></script>
   </body>
